Add french translation
Formspec fields had weird sizes (they did not match the screenshot), so
I edited sizes to make sure translated text is fully displayed.

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -29,6 +29,8 @@ Teleport=
 There's already a waypoint there.=
 #chat command error message
 This command is for server admins only.=
+#Type of waypoint label
+Type:=
 #player chat
 Waypoint updated.=
 #text of the default popup shown when a player discovers a waypoint
